src/objects/Card_Visibility__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category Account</description>
        <label>Category</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Sector__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Research Body</fullName>
                </value>
                <value>
                    <fullName>Agency Holding Company</fullName>
                </value>
                <value>
                    <fullName>Aircraft Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Airline Alliance</fullName>
                </value>
                <value>
                    <fullName>Airline Global Card Acquirer</fullName>
                </value>
                <value>
                    <fullName>Airline Holding Company</fullName>
                </value>
                <value>
                    <fullName>Airport Authority</fullName>
                </value>
                <value>
                    <fullName>Airport Concessionaire</fullName>
                </value>
                <value>
                    <fullName>Airport Operator</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>ANSP</fullName>
                </value>
                <value>
                    <fullName>Apartment and Villa Rental</fullName>
                </value>
                <value>
                    <fullName>Banking Service</fullName>
                </value>
                <value>
                    <fullName>Box Office</fullName>
                </value>
                <value>
                    <fullName>Bus Line</fullName>
                </value>
                <value>
                    <fullName>Card Brand</fullName>
                </value>
                <value>
                    <fullName>Cargo only</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Casino</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
                <value>
                    <fullName>Civil Aviation Authority</fullName>
                </value>
                <value>
                    <fullName>Consultancy Firm</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Cruise Line</fullName>
                </value>
                <value>
                    <fullName>Engine Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Freight Forwarder Association</fullName>
                </value>
                <value>
                    <fullName>Fuel Supplier</fullName>
                </value>
                <value>
                    <fullName>General Aviation</fullName>
                </value>
                <value>
                    <fullName>Global Distribution System</fullName>
                </value>
                <value>
                    <fullName>Governmental Aviation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendation_Visibility__c</fullName>
        <description>Use to link Recommendation visibility records and Card visility records</description>
        <label>Recommendation Visibility</label>
        <referenceTo>Recommendations_Visibility__c</referenceTo>
        <relationshipLabel>Cards Visibility</relationshipLabel>
        <relationshipName>Cards_Visibility</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Account sector</description>
        <label>Sector</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Airline Supplier</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Equipment Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Cargo Agent</fullName>
                    <label>Freight Forwarder</label>
                </value>
                <value>
                    <fullName>General Public</fullName>
                </value>
                <value>
                    <fullName>General Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Governmental Institution</fullName>
                </value>
                <value>
                    <fullName>Holding Company</fullName>
                </value>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Non-Airline Transportation</fullName>
                </value>
                <value>
                    <fullName>Recreational</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Travel Agent</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Partner</fullName>
                    <isActive>false</isActive>
                    <label>Infrastructure Partner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Card Visibility</label>
    <nameField>
        <displayFormat>Visibility-{0000000}</displayFormat>
        <label>Card Visibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cards Visibility</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>